src/objects/BGBK__BatchSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BGBK__Batch_Object__c</fullName>
        <description>Object from which the batch needs to be run.</description>
        <label>Batch Object</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Batch_Size__c</fullName>
        <description>Number of records per batch that will be processed.</description>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBK__Default_Filters__c</fullName>
        <description>Filter requirements to narrow down the records that need to be processed.</description>
        <label>Default Filters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Maximum_Records__c</fullName>
        <description>If the number of records returned by the Batch is greater than the number specified, they get capped; they will not be returned.</description>
        <inlineHelpText>If the number of records returned by the Batch is greater than the Maximum they get capped</inlineHelpText>
        <label>Maximum Records</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBK__Minimum_Records__c</fullName>
        <description>The minimum threshold, including filters and the percentage, that are required for the Batch to run.</description>
        <inlineHelpText>The minimum threshold, including filters and the percentage, for the Batch to run</inlineHelpText>
        <label>Minimum Records</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBK__Profile_Access__c</fullName>
        <description>For DRE1, this setting controls which profile has access to the batch option on the batch screen. An empty value means that all profiles can access the option. This is not applicable for DRE 2.0.</description>
        <label>Profile Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Randomize_Percentage__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Percentage of the number of records that needs to be processed.</description>
        <label>Randomize Percentage</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BGBK__Randomize_Rounding_Method__c</fullName>
        <defaultValue>&quot;CEILING&quot;</defaultValue>
        <description>If the number of returned records has a decimal place, this determines whether the number will be rounded up (ceiling) or down (floor).</description>
        <inlineHelpText>FLOOR/CEILING</inlineHelpText>
        <label>Randomize Rounding Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__ScheduledJobIds__c</fullName>
        <description>List of comma-delimited Apex Scheduled Job ID&apos;s for this batch</description>
        <label>ScheduledJobIds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Batch Settings</label>
</CustomObject>